# ndx-template

./: .gitignore  README.md  azure-pipelines-nightly.yml  azure-pipelines.yml  cookiecutter.json  license.txt  local_extensions.py  test.py
.github/workflows/: run_tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py  test_template_evaluation.py
{{ cookiecutter.namespace }}/: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  NEXTSTEPS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements-opt.txt  requirements.txt  setup.cfg  setup.py
{{ cookiecutter.namespace }}/.github/workflows/: check_external_links.yml  ruff.yml  run_all_tests.yml  run_coverage.yml  run_flake8.yml  validate_schema.yml
{{ cookiecutter.namespace }}/docs/: Makefile  README.md  make.bat
{{ cookiecutter.namespace }}/docs/source/: conf.py  conf_doc_autogen.py  description.rst  format.rst  index.rst
{{ cookiecutter.namespace }}/notebooks/: example.ipynb
{{ cookiecutter.namespace }}/src/: create_extension_spec.py
{{ cookiecutter.namespace }}/src/pynwb/tests/: test_tetrodeseries.py
{{ cookiecutter.namespace }}/src/pynwb/{{ cookiecutter.py_pkg_name }}/: __init__.py
{{ cookiecutter.namespace }}/src/pynwb/{{ cookiecutter.py_pkg_name }}/widgets/: README.md  __init__.py  tetrode_series_widget.py
{{ cookiecutter.namespace }}/src/spec/: create_extension_spec.py  export_spec.py
{{ cookiecutter.project_slug }}/: .gitignore  NEXTSTEPS.md
{{ cookiecutter.project_slug }}/docs/: README.md
{{ cookiecutter.project_slug }}/docs/source/: conf_doc_autogen.py  format.rst
